Add management Account and view Statistical for category.

--- a/WebContent/resource/css/mos-style.css
+++ b/WebContent/resource/css/mos-style.css
@@ -115,7 +115,7 @@ tr.data:hover small {color: #5b5b5b;}
 }
 .inHeader {
 	float: center;
-	background: url(../img/logo.png) no-repeat left center;
+	background: url(../img/logo.jpg) no-repeat left center;
 	margin: auto;
 	width: 920px;
 	height: 45px;
@@ -124,7 +124,7 @@ tr.data:hover small {color: #5b5b5b;}
 	border-left: 0px solid #dcdcdc;
 }
 .inHeaderLogin {
-	background: url(../img/logo.png) no-repeat left center;
+	background: url(../img/logo.jpg) no-repeat left center;
 	height: 75px;
 }
 .mosAdmin {
